--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
       <p>Email <strong>evanbdelgado@gmail.com</strong></p>
 
       <div class="footer__nav">
-        <p>Evandro</p>
-        <p class="footer__top"><a href="#">Back to Top</a></p>
+        <p>Evandro</p><p class="footer__top"><a href="#">Back to Top</a>
         <ul>
           <li> <a href="#top">HOME</a> </li>
           <li> <a href="#portfolio">PORTFOLIO</a> </li>
